  be identical with the queue id, however, for linuxaio there is only one
  queue; thus the distinction had to be made. In a default config, no changes
  are necessary, as the device_id parameter is automatically enumerated.

* adding stxxl::binary_buffer which can be used for compact serialization and
  reading via a stxxl::binary_reader cursor interface.

* stxxl::unordered_map

Version 1.4.0 (12 December 2013)

* Reorganized Directory Hierarchy
  - separating old component based directories into lib/ (libstxxl source
    files), tests/ (for tests cases), examples/ (for tutorial and example code)
    and tools/ (for stxxl_tool and more benchmarks).

* CMake build system for cross-platform compilation
  - replaced adhoc Makefiles with CMake build system
  - CMake scripts can also output MSVC project files and more.
  - all component tests must register with CMake's test system -> run make test
  - generates pkg-config and CMake's project config files

* Greatly Improved Doxygen Documentation
  - integrated old LaTeX tutorial
  - newly written tutorials for almost all STXXL containers and algorithms
  - embedded design documentation from Roman Dementiev's PhD thesis
  - new compilation instructions for CMake build system

* Improved .stxxl Config Options for File I/O Implementations
  - looking for .stxxl in more places than just the current directory (see the
    docs for which places exactly).
  - parse file size with SI and IEC units, like "10GiB" in disk= config lines.
  - parse additional file I/O implementation options.
  - support for "unlink_on_open" (keep file descriptor but unlink file) and
    "delete_at_exit" options.
  - support for "direct=off/try/on" to turn off O_DIRECT for tmpfs and similar.
  - the default open mode is now direct=try -> prints a warning if O_DIRECT is
    unavailable on the system.

* .stxxl Config Options Represented as disk_config Class
  - all disk= config lines are parsed into disk_config objects.